--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^3.0.0
+  dio: ^4.0.0
+  rxdart: ^0.27.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,6 +55,7 @@ flutter:
     - assets/image/Orange.jpg
     - assets/image/daredevil.jpg
     - assets/image/Avengers_Lib.jpg
+    - assets/image/mvdb.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
