--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   carousel_slider: ^3.0.0
   dio: ^4.0.0
   rxdart: ^0.27.0
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
