--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio: ^4.0.0
   rxdart: ^0.27.0
   intl: ^0.17.0
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,6 +58,7 @@ flutter:
     - assets/image/daredevil.jpg
     - assets/image/Avengers_Lib.jpg
     - assets/image/mvdb.png
+    - assets/image/play4.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
